<resources>
    <string name="app_name">RC-DC</string>
    <string name="upload_title">Upload</string>
    <string name="upload_msg">Would you like to upload ?</string>
    <string name="upload_data">No data avalable for upload !</string>
    <string name="upload_fail">Upload Failed !</string>
    <string name="upload_success">Upload Successful !</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="reconnect_title">Reconnection</string>
    <string name="reconnect_msg">Would you like to reconnect?</string>
    <string name="don_book">Download Book</string>
    <string name="don_consumer">Download Consumer</string>
    <string name="don_consumer_list">Consumer List</string>
    <string name="up_consumer">Upload Disconnected Consumer</string>
    <string name="select_book">-- Select Book --</string>
    <string name="con_id">Consumer ID</string>
    <string name="book_no">Book Number</string>
    <string name="due_amt">Pay Amount</string>
    <string name="sel_book">Select Book</string>
    <string name="header_report">Report</string>
    <string name="header_dis_con">Disconnected Consumer</string>
    <string name="sel_cat">Select Category</string>
    <string name="dow_cat">Download Category</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="filter">Filter Consumer</string>
    <string name="proceed">Proceed</string>
    <string name="disconnect">Disconnect</string>
    <string name="read_status">Read Status</string>
    <string name="enter_last_reading">Enter Last Reading</string>
    <string name="enter_rem">Enter Remarks</string>
    <string name="teke_photo">Click Photo</string>
    <string name="wait_gps">Wait For GPS..</string>
    <string name="no_internet">No internet Connection</string>
    <string name="ver_msg">"Your Device must be either Kitkat or Above Version !"</string>
</resources>
