<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DownloadConsumerActivity">

    <include
        android:id="@+id/lay_dc"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_dc"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/download_cotegoriy"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/dow_cat"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/sel_cat"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/text_category"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectengle_search"
            android:hint="Enter Amount"
            android:inputType="numberSigned"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/download_con"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/footer_dc"
        android:background="@color/colorPrimaryDark"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/footer_dc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/footer" />
    </LinearLayout>
</RelativeLayout>