<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/con_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:padding="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Consumer Name"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/circuler_shape" />
        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:padding="3dp"
            android:text="@string/con_id"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/con_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".55"
            android:padding="3dp"
            android:text="...."
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/circuler_shape" />
        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:padding="3dp"
            android:text="@string/book_no"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/book_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".55"
            android:padding="3dp"
            android:text="...."
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/circuler_shape" />
        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:padding="3dp"
            android:text="@string/due_amt"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/text_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".55"
            android:padding="3dp"
            android:text="...."
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/text_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="................................."
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/green"
             />

        <ImageView
            android:id="@+id/text_connect"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight=".3"
            android:src="@drawable/reconnect" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:background="@color/colorAccent"
        />
</LinearLayout>