<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <include
            android:id="@+id/in_header"
            layout="@layout/header" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_select_book"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectengle_login"
        android:gravity="center"
        android:text="@string/select_book"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_below="@+id/ll_header"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_footer"
        android:layout_below="@+id/text_select_book"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/download_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/report_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:text="Report"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <LinearLayout
                        android:id="@+id/download_book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/download" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/don_book"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <LinearLayout
                        android:id="@+id/ll_download_consumer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/download_con" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/don_consumer"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <LinearLayout
                        android:id="@+id/ll_con_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/consumer_list" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/don_consumer_list"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <LinearLayout
                            android:id="@+id/ll_upload"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/upload" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:padding="5dp"
                                android:text="@string/up_consumer"
                                android:gravity="center"
                                android:textColor="@color/white"
                                android:textSize="11sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/text_count"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginLeft="60dp"
                            android:background="@drawable/circuler_shape"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/black" />

                    </FrameLayout>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".33"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/consumer" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="DC Consumer"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_launcher_foreground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="Coming.."
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/footer" />
    </LinearLayout>
</RelativeLayout>